Changed text on .front face to prevent overflow in about div

--- a/assets/stylesheets/menu-styles.css
+++ b/assets/stylesheets/menu-styles.css
@@ -126,6 +126,11 @@ section{
     background-color: #FF9B25;
 }
 
+.front-face{
+    font-size: 18px;
+}
+
+
 .stats-div{
     background-color: #5DFE9E;
 }
